# findfaces

./: .gitignore  Dockerfile.debian  Dockerfile.debian.vs  Dockerfile.vs  LICENSE  README.md  x64-linux-musl.cmake
service/: Dockerfile  docker-compose.yml
service/nginx-conf/: nginx.conf
service/src/: faces.cpp  faces.h  server.cpp
src/: CMakeLists.txt  CMakeSettings.json  build.sh  server.h
website/: .gitignore  Dockerfile  fileUpload.js  package-lock.json  package.json  router.js
website/public/: index.html
website/views/: image.ejs  index.ejs
